# dotfiles

./: .chezmoiignore  .chezmoiremove  .gitignore  .gitmodules  .gtkrc-2.0  .sops.yaml  .stow-local-ignore  .tmux.conf  .wezterm.lua  .zshrc  AGENTS.md  Dockerfile  age-edit  arch-install.sh  archinstall.sh  archpackages.txt  aurinstall.sh  aurpackages.txt  create_sym_links.sh  deploy.sh  docker-compose.yml  dot_gitconfig  dot_gitconfig.tmpl  dot_tmux.conf  flake.nix  install.sh  install_linux.sh  macosinstall.sh  main.py  manage.py  pyproject.toml  setup-linux.sh  setup-mac.sh  setup-vm  setup.sh
.config/: chrome-flags.conf  mimeapps.list  pavucontrol.ini  starship.toml
.config/aerospace/: aerospace.toml
.config/alacritty/: alacritty.toml
.config/awesome/: rc.lua
.config/dunst/: dunstrc  launch.sh
.config/xmonad/: myXmonad.cabal  stack.yaml  xmonad.hs
aerospace/: aerospace.toml
alacritty/: alacritty.toml
all/: .zshrc
common/: .gitconfig  .gtkrc-2.0  .tmux.conf  .zshrc
dot_codex/: yolo.config.toml
dot_config/: starship.toml
dunst/: dunstrc  launch.sh
dwm/: config.h  dwm
eww/: eww.scss  eww.yuck
fish/: fish_variables
i3/: config
i3status/: config
localbin/: update-checker
nvim/: init.lua  lazy-lock.json
picom/: picom.conf
polybar/: config.ini
qtile/: config.py
rofi/: config.rasi  theme.rasi
starship/: starship.toml
sx/: sxrc
sxhkd/: sxhkdrc
tmux/: .tmux.conf  tmux.conf
x11/: .Xresources  .xsessionrc
zsh/: .p10k.zsh  .zshrc  asdf.sh  rbenv.sh  zsh-entrypoint.sh
zshrc/: aliases.sh  functions.sh  tmuxifier.sh
(+314 files in other folders)
